; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_isp1301_pullup_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_isp1301_pullup_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpc32xx_udc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lpc32xx_udc*, i32, i32)* @isp1301_pullup_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isp1301_pullup_enable(%struct.lpc32xx_udc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.lpc32xx_udc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.lpc32xx_udc* %0, %struct.lpc32xx_udc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %4, align 8
  %9 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp eq i32 %7, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %26

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %4, align 8
  %16 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %4, align 8
  %21 = call i32 @isp1301_pullup_set(%struct.lpc32xx_udc* %20)
  br label %26

22:                                               ; preds = %13
  %23 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %4, align 8
  %24 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %23, i32 0, i32 1
  %25 = call i32 @schedule_work(i32* %24)
  br label %26

26:                                               ; preds = %12, %22, %19
  ret void
}

declare dso_local i32 @isp1301_pullup_set(%struct.lpc32xx_udc*) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
